bug fix text align center for all tables

--- a/src/app/loan-assessment/customers/customers.component.css
+++ b/src/app/loan-assessment/customers/customers.component.css
@@ -20,3 +20,9 @@ h1 {
 .mat-column-aadharNumber {
   border-left: 1px solid #ccc;
 }
+
+.mat-mdc-cell,
+.mat-mdc-header-cell {
+  padding: 0 16px;
+  text-align: center;
+}
